infra/k8s/facilities-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facilities-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facilities
  template:
    metadata:
      labels:
        app: facilities
    spec:
      containers:
        - name: facilities
          image: d2mittal/facilities
---
apiVersion: v1
kind: Service
metadata:
  name: facilities-srv
spec:
  selector:
    app: facilities
  ports:
    - name: facilities
      protocol: TCP
      port: 3000
      targetPort: 3000
