infra/k8s/facilities-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facilities-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facilities-mongo
  template:
    metadata: 
      labels:
        app: facilities-mongo
    spec:
      containers:
        - name: facilities-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: facilities-mongo-srv
spec:
  selector:
    app: facilities-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
