infra/k8s/reservations-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservations-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservations
  template:
    metadata:
      labels:
        app: reservations
    spec:
      containers:
        - name: reservations
          image: d2mittal/reservations
---
apiVersion: v1
kind: Service
metadata:
  name: reservations-srv
spec:
  selector:
    app: reservations
  ports:
    - name: reservations
      protocol: TCP
      port: 3000
      targetPort: 3000
